                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 28-11-2004 fixed: possible lockup switching from gui to fullscreen video while video playing
  - 28-11-2004 fixed: bug in kaiclient preventing voice chat from working.
  - 27-11-2004 added: Show contact/friend avatar on Kai Toast popup.
  - 27-11-2004 updated: Polish language file (Thnx to napek)
  - 27-11-2004 added: flash Kai chat tab briefly when another player sends message while tab not currently selected.
  - 27-11-2004 fixed: some memory leaks in the database code.
  - 27-11-2004 added: GUIConditionalButton
  - 27-11-2004 added: albuminfo, songs from allmusic.com are saved to database
  - 26-11-2004 added: Use left and right trigger to change between Kai views.
  - 26-11-2004 added: XLink Kai tabbed view.
  - 25-11-2004 added: XLink Kai network reachable checking.
  - 25-11-2004 changed: Fade in from dimmed and black screensaver
  - 25-11-2004 fixed: Screen only partially filled on HDTV
  - 24-11-2004 fixed: last folder not remembered on 'back' (sf bug #1071390)
  - 24-11-2004 updated: Hungarian language file (Thnx to Tracy18)
  - 24-11-2004 updated: Italian language file (Thnx to kotix)
  - 24-11-2004 fixed: my programs, scanning doesn't free its memory
  - 23-11-2004 fixed: kai pop-up killing speex audio while visible.
  - 23-11-2004 added: modeless dialog rendering, kai pop-up less intrusive.
  - 23-11-2004 added: inline text editor control (for Kai text chat and all who want it).
  - 21-11-2004 added: Startup splash
  - 21-11-2004 added: Kai text chat (alpha - needs a little visual tidy up, to be improved with 'in-line' edit control). 